Fixed overflow bug

--- a/assets/built/tw.css
+++ b/assets/built/tw.css
@@ -680,10 +680,6 @@ video {
   margin-top: -3.5rem;
 }
 
-.-mt-px {
-  margin-top: -1px;
-}
-
 .mb-0 {
   margin-bottom: 0px;
 }
